# HRIM

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  datasheet_generator.py  generator.py  hrim.py  listing.pitch  model.xml  setup.py
.docker/ci/: Dockerfile  docker-entrypoint.sh
.github/ISSUE_TEMPLATE/: feature_request.md
actuator/Gripper/hrim_actuator_gripper_msgs/: CMakeLists.txt  package.xml
actuator/Gripper/hrim_actuator_gripper_msgs/msg/: SpecsFingerGripper.msg  SpecsMagneticGripper.msg
actuator/RotaryServo/: StateRotaryServo.msg
datasheet_generator/: README.md  datasheet_generator.py  requirements.txt
datasheet_generator/html/: IDForm.js  characteristics.js  index.html  utils.js
datasheet_generator/latex/: template.tex
datasheet_templates/actuator/: datasheet_template_3dcamera.xml  datasheet_template_gripper_finger.xml  datasheet_template_rotaryservo.xml
datasheet_templates/sensor/: datasheet_template_3dcamera.xml
examples/hrim_generic_msgs/: CMakeLists.txt
hrim/: __main__.py
hrim/scripts/: __init__.py  compiling.py  parsing.py
hrim_actuator_msgs/hrim_actuator_gripper_finger_msgs/: package.xml
hrim_actuator_msgs/hrim_actuator_gripper_magnetic_msgs/: package.xml
hrim_actuator_msgs/hrim_actuator_gripper_msgs/: package.xml
hrim_actuator_msgs/hrim_actuator_rotaryservo_msgs/: package.xml
hrim_actuator_msgs/hrim_actuator_servomotor_msgs/: CMakeLists.txt
hrim_actuator_msgs/hros_actuator_gripper_vacuum_msgs/: CMakeLists.txt  package.xml
hrim_actuator_msgs/hros_actuator_servomotor_msgs/: CMakeLists.txt  package.xml
hrim_actuator_srvs/hrim_actuator_gripper_finger_srvs/: CMakeLists.txt  package.xml
hrim_actuator_srvs/hrim_actuator_gripper_srvs/: package.xml
hrim_actuator_srvs/hrim_actuator_gripper_vacuum_srvs/: CMakeLists.txt  package.xml
hrim_composite_msgs/hrim_composite_arm_msgs/: CMakeLists.txt  package.xml
hrim_composite_msgs/hrim_composite_conveyor_msgs/: CMakeLists.txt  package.xml
hrim_composite_msgs/hrim_composite_mobilebase_msgs/: package.xml
hrim_composite_srvs/hrim_composite_arm_srvs/: CMakeLists.txt  package.xml
hrim_generic_msgs/: CMakeLists.txt  package.xml
hrim_generic_msgs/msg/: ID.msg  Info.msg  Power.msg  Simulation3D.msg  SimulationURDF.msg  SpecsCommunication.msg  StateCommunication.msg  Status.msg
hrim_qa/: CMakeLists.txt  package.xml
hrim_qa/scripts/: interface.py  publisher_py.py  replier_py.py  requester_py.py  subscriber_py.py
hrim_qa/test/: test_msgs.py.in  test_srvs.py.in
hrim_sensor_msgs/hrim_sensor_2dlaser_msgs/: CMakeLists.txt  package.xml
hrim_sensor_msgs/hrim_sensor_camera_msgs/: CMakeLists.txt  package.xml
hrim_sensor_msgs/hrim_sensor_depthsensor_msgs/: CMakeLists.txt  package.xml
hrim_sensor_msgs/hrim_sensor_gasdetector_msgs/: CMakeLists.txt  package.xml
hrim_sensor_msgs/hrim_sensor_imu_msgs/: package.xml
hrim_sensor_msgs/hrim_sensor_microphone_msgs/: package.xml
hrim_sensor_msgs/hrim_sensor_rangefinder_msgs/: CMakeLists.txt  package.xml
hrim_sensor_msgs/hrim_sensor_thermometer_msgs/: package.xml
hrim_sensor_srvs/hrim_sensor_camera_srvs/: CMakeLists.txt  package.xml
hrim_ui_msgs/hrim_ui_rc_msgs/: package.xml
hros_actuation_msgs/hros_actuation_gripper_finger_msgs/: CMakeLists.txt  package.xml
hros_actuation_msgs/hros_actuation_gripper_finger_msgs/msg/: GripperFingerState.msg
hros_actuation_msgs/hros_actuation_gripper_magnetic_msgs/: CMakeLists.txt  package.xml
hros_actuation_msgs/hros_actuation_gripper_msgs/: CMakeLists.txt  package.xml
hros_actuation_msgs/hros_actuation_gripper_vacuum_msgs/: CMakeLists.txt  package.xml
hros_actuation_msgs/hros_actuation_servomotor/: CMakeLists.txt  package.xml
hros_actuation_msgs/hros_actuation_servomotor_msgs/: CMakeLists.txt  package.xml
hros_actuation_srvs/hros_actuation_gripper_finger_srvs/: CMakeLists.txt  package.xml
hros_actuation_srvs/hros_actuation_gripper_srvs/: CMakeLists.txt  package.xml
hros_actuation_srvs/hros_actuation_gripper_vacuum_srvs/: CMakeLists.txt  package.xml
hros_composite_msgs/hros_composite_arm_msgs/: CMakeLists.txt  package.xml
hros_composite_msgs/hros_composite_conveyor_msgs/: CMakeLists.txt  package.xml
hros_composite_msgs/hros_composite_mobilebase_msgs/: CMakeLists.txt  package.xml
hros_composite_srvs/hros_composite_arm_srvs/: CMakeLists.txt  package.xml
hros_generic_msgs/: CMakeLists.txt  package.xml
hros_generic_msgs/msg/: Info.msg  Power.msg  Status.msg
hros_sensing_msgs/hros_sensing_2dlaser_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_camera/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_camera_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_depthsensor_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_depthsensor_msgs/msg/: CloudPoint.msg  SpecsDepthSensor.msg
hros_sensing_msgs/hros_sensing_gasdetector_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_imu_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_laser2d_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_microphone_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_rangefinder/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_rangefinder_msgs/: CMakeLists.txt  package.xml
hros_sensing_msgs/hros_sensing_thermometer_msgs/: CMakeLists.txt  package.xml
hros_sensing_srvs/hros_sensing_camera_srvs/: CMakeLists.txt  package.xml
hros_sensing_srvs/hros_sensing_camera_srvs/srv/: SetCameraInfo.srv
hros_ui_msgs/hros_ui_rc_msgs/: CMakeLists.txt  package.xml
installator/: files.txt  requirements.txt  setup.py
installator/hrim/: __main__.py
latex/: template.tex
linter/: .pylintrc
models/: dataMapping.xml
models/complex/: quaternion.xml  time.xml  vector3.xml
scripts/: classes.py  compiling.py  parse.py  parsing.py  printing.py  utils.py
sensor/microphone/hrim_sensor_microphone_msgs/: package.xml
sensor/rangefinder/hrim_sensor_rangefinder_msgs/: package.xml
templates/: cmake.txt  package.txt
test/: test_hrim.py
(+429 files in other folders)
