<?xml version="1.0"?>
<package format="3">
  <name>hros_actuation_gripper_finger_msgs</name>
  <version>0.0.2</version>
  <description>
     hros_actuation_gripper_finger_msgs defines the messages to interact with finger grippers.
  </description>
  <maintainer email="alex@erlerobotics.com">Alejandro Hernández Cordero</maintainer>
  <maintainer email="victor@erlerobotics.com">Víctor Mayoral Vilches</maintainer>
  <license>All rights reserved</license>

  <url></url>
  <author>alex@erlerobotics.com</author>
  <author>victor@erlerobotics.com</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_generation</exec_depend> <!-- provide message generation to downstream packages -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
