<?xml version="1.0"?>
<package format="3">
  <name>hros_sensing_camera_srvs</name>
  <version>0.0.2</version>
  <description>
     hros_sensing_camera_srvs defines the services to interact with a
     camera.
  </description>
  <maintainer email="alex@erlerobotics.com">Alejandro Hernández Cordero</maintainer>
  <maintainer email="irati@erlerobotics.com">Irati Zamalloa</maintainer>
  <license>All rights reserved</license>

  <url></url>
  <author>alex@erlerobotics.com</author>
  <author>irati@erlerobotics.com</author>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hros_sensing_camera_msgs</build_depend>

  <exec_depend>message_generation</exec_depend> <!-- provide message generation to downstream packages -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hros_sensing_camera_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
